# alphago

./: .gitignore  CLAUDE.md  CMakeLists.txt  GOALS.md  INFRA_PROGRESS.md  PROGRESS.md  ROADMAP.md  pyproject.toml  requirements.txt  research_ideas.md  setup_env.sh
.claude/commands/: experiment.md
.claude/infra/: check_pods.sh  poll_queue.sh
baselines/: README.md
baselines/connect4/: args.json  history.json
baselines/othello/: generate.py
baselines/tictactoe/: args.json  history.json
checkpoints/: history.json
csrc/: bindings.cpp  go_game.cpp  go_game.h  mcts_node.cpp  mcts_node.h  self_play.cpp  self_play.h
docs/: go_transition.md
experiments/: optimization_log.tsv  run_both.sh  run_fixes.sh
experiments/20260227_c4_num_sims_sweep/: config.json  report.md  run.py
experiments/20260227_cpuct_sweep/: config.json  report.md  run.py
experiments/20260227_num_sims_sweep/: report.md  run.py
experiments/20260301_parallel_speedup/: config.json  report.md  run.py
experiments/20260301_parallel_virtual_loss/: config.json  report.md  run.py
experiments/20260304_othello_cnn_vs_mlp/: config.json  report.md  run.py
experiments/20260305_othello_10x10_cnn_vs_mlp/: config.json  run.py
experiments/20260305_othello_scale/: report.md  (+2 more)
scripts/: bench.py  bench_cpp.py  benchmark_selfplay.py  eval_comprehensive.py  eval_vs_gnugo.py  play.py  profile_mcts.py  profile_selfplay.py  quick_train.py  train.py
tests/: test_connect4.py  test_cpp_bindings.py  test_game.py  test_go.py  test_mcts.py  test_neural_net.py  test_othello.py  test_parallel.py  test_training.py
(+125 files in other folders)
