[build-system]
requires = ["scikit-build-core>=0.9", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "alpha-go"
version = "0.1.0"
description = "AlphaZero from scratch — self-play RL research testbed"
requires-python = ">=3.9"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/alpha_go", "src/mcts_cpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
